Fixed some issues detected by FindBugs.